--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
 	"scripts": {
 		"pretest": "es-shim-api --bound",
 		"test": "npm run tests-only",
-		"tests-only": "node tests/tests.js",
-		"cover": "istanbul cover --report html --verbose --dir coverage tests/tests.js"
+		"tests-only": "tape 'tests/*.js'",
+		"cover": "istanbul cover --report html --verbose --dir coverage tape 'tests/*.js'"
 	},
 	"dependencies": {
 		"define-properties": "^1.1.3",
-		"es-abstract": "^1.17.5"
+		"function-bind": "^1.1.1",
+		"functions-have-names": "^1.2.1",
+		"istanbul": "^0.4.5",
+		"tape": "^5.0.0"
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
