--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
 	},
 	"dependencies": {
 		"define-properties": "^1.1.3",
+		"es-abstract": "^1.17.5"
+	},
+	"devDependencies": {
+		"@es-shims/api": "^2.1.2",
 		"function-bind": "^1.1.1",
 		"functions-have-names": "^1.2.1",
 		"istanbul": "^0.4.5",
 		"tape": "^5.0.0"
-	},
-	"devDependencies": {
-		"@es-shims/api": "^2.1.2",
-		"istanbul": "^0.4.5"
 	}
 }
